# stock-report-generator

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_api_key.py
code/: cleanCSVs.py  gemini_report.py  main.py  makeCSV.py  makeGraph.py  pdf_generator.py  quantile.py
data/: NVDA.csv
src/stock_report_generator/: __init__.py  __main__.py  gemini_report.py  makeCSV.py  makeGraph.py  pdf_generator.py  prompts.py  quantile.py
